tests/samples/good/line_comment.co
fun main() {
  var x = 2;
  // x = 4;
  assert(x == 2);
}
