tests/samples/compile_error/variable_initializer_is_procedure.co
fun foo() {
  write 42;
}

fun main() {
  var x = foo();
}
